@@ -6,3 +6,4 @@
 081016 rk  modbus    Added more functionality.
 090301 cs  usbio     Bugfix for Ai on port B. If Ai and Di/Do were mixed the Ai didn't work.
 091208 cs  modbus    Modbus TCP Server implemented.
+100316 cs  modbus    ScanInterval added to modbus slave object.
